pkg/lang/syntax/testdata/ub/validate/invalid/stack/encryption-body-meta-key.ub
stack: {
  state: local {
    path: '.unobin/state'
  }
  encryption: noop {
    @key-source: noop
  }
}
